
<!--We can have multiple string layout xml or one. Either way are no problem-->
<resources>
    <string name="app_name" translatable="false">MobileGroupAssignment</string>


    <!--Rustom string are in this boundary. Do not touch!-->

    <string name="sunRiseSetString">Sunrise and Sunset Look</string>
    <string name="sunRiseSetlook" translatable="true" >Sunrise and Sunset Lookup</string>

    <string name="locationSave" translatable="true">Location saved to favorites!</string>

    <string name="prefix_sunrise" translatable="true">Sunrise: </string>
    <string name="prefix_sunset" translatable="true">Sunset: </string>


    <string name="confirm_delete_location" translatable="true" >Are you sure you want to delete this location?</string>
    <string name="delete_confirmation_title" translatable="true">Delete Confirmation</string>

    <string name="pref_key_last_latitude" >last_latitude</string>
    <string name="pref_key_last_longitude">last_longitude</string>
    <string name="pref_name" translatable="false">SunriseSunsetApp</string>
    <string name="error_parsing_json" translatable="false">Error parsing JSON</string>
    <string name="location_deleted">Location deleted</string>
    <string name="shared_pref_name" translatable="false">SunriseSunsetApp</string>


    <string name="sunrise_time">Sunrise Time</string>
    <string name="sunset_time">Sunset Time</string>
    <string name="location_name">Location Name</string>
    <string name="delete">Delete</string>
    <string name="Menu" translatable="false">MENU!</string>
    <string name="InvalidNumeric">Please enter valid numeric values for latitude and longitude.</string>

    <string name="help">Sunrise and Sunset</string>
    <string name="SunriseSunseHelp">"The application Sunrise and Sunset Time Finder allows users to enter latitude and longitude to determine the sunrise and sunset times for that location. Users can save these locations and times to a favorites list."</string>

    <string name="save2fav">Save to Favorites</string>
    <!--************************************************-->


    <!--Mahsa's string are in this boundary. Do not touch!-->
    <string name="please_enter_word">Please enter word…</string>
    <string name="part_of_speech">Part Of Speech</string>
    <string name="definitions_0">Definitions: 0</string>
    <string name="mahsa_from_server">From Server</string>
    <string name="mahsa_from_local">From Local</string>
    <string name="base_api_url">https://api.dictionaryapi.dev/api/v2/entries/en/</string>
    <string name="get_word_info">Get word info</string>
    <string name="name">NAME</string>
    <string name="definitions">Definitions</string>
    <string name="mahsa_help_dialog">Help dialog</string>
    <string name="mahsa_help_dialog_title">Title dialog</string>
    <string name="mahsa_help_dialog_message">
        1. write the name of words when you like to find meaning of words\n\n
        2. Click on from sever or local (local will only for save words)\n\n
        3. you can see synonyms or opposite words\n\n
        3. you can add or remove words
    </string>
    <string name="mahsa_shareprefrence_name">mahsa.dictionary.api</string>
    <string name="mahsa_db_name">mahsa_dictionary_api_db</string>
    <string name="share_preference_key">word</string>
    <string name="mahsa_remove_word">"Successfully removed word, Word: "</string>
    <string name="mahsa_fail_delete">"Fail to delete word, Message: "</string>
    <string name="mahsa_enter_word_search">Please enter word and search</string>
    <string name="mahsa_saving_word_word">"Saving word, Word: "</string>
    <string name="mahsa_successfully_saved_word">Successfully saved word</string>
    <string name="mahsa_fail_to_save_word_message">"Fail to save word, Message: "</string>
    <string name="mahsa_please_check_server_or_local">Please check server or local</string>
    <string name="mahsa_successfully_fetch_words_from_local">Successfully fetch words from local</string>
    <string name="mahsa_fail_to_fetch_words_message">"Fail to fetch words, Message: "</string>
    <string name="mahsa_please_enter_word">Please enter word</string>
    <string name="mahsa_fail_to_response_handler">Fail to response handler</string>
    <string name="mahsa_intent_index_key">selectedIndex</string>
    <string name="mahsa_dictionary_api">Mahsa - Dictionary API</string>
    <string name="number_of_synonyms">Number of synonyms</string>
    <string name="number_of_antonyms">Number of antonyms</string>
    <string name="number_of_definitions">Number of definitions</string>
    <string name="mahsa_synonyms">Synonyms</string>
    <string name="mahsa_antonyms">Antonyms</string>
    <!--************************************************-->



    <!--Nathaniel string are in this boundary. Do not touch!-->

    <string name="empty_field">Empty field</string>
    <string name="ce">Correct entry</string>
    <string name="help2">This is how to use the application</string>
    <string name="help_body">This application allows you to search for songs online, select them, and save them to your device.

To use the app:
1. Navigate to the search bar and enter the artist\'s name.
2. Once you\'ve entered the artist\'s name, you\'ll see a list of songs by that artist.
3. Select a song from the list to view its details.
4. To add a song to your device, click on the star icon. You can then view your list of favorite songs by clicking on the "View" button.
5. Finally, you can delete a song from the list by clicking on the delete button.</string>

    <string name="done">Done</string>
    <string name="question">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="adding_song">Song successfully deleted</string>
    <string name="author">Created by farock natanael</string>
    <string name="error1">Error fetching track list: </string>
    <string name="error2">Error fetching data: </string>
    <string name="search">search</string>
    <string name="list">These are your favourite songs</string>
    <string name="view_list">View favourite list</string>
    <string name="place_holder">Please enter artist name</string>
    <string name="del">Delete Favourite Song</string>
    <string name="my_hint">song list goes here</string>





    <!--************************************************-->



    <!--Aram string are in this boundary. Do not touch!-->
    <string name="base_recipe_api_url" translatable="false">https://api.spoonacular.com/recipes/</string>
    <string name="base_recipe_ingredients_image_url" translatable="false">https://spoonacular.com/cdn/ingredients_500x500/</string>
    <string name="recipe_token" translatable="false">e5306fca9c4b49c39fff5d596af82b7f</string>

    <string name="recipe_search">Recipe Search</string>
    <string name="open">OPEN</string>
    <string name="id" translatable="false">Id</string>
    <string name="_0" translatable="false">0</string>
    <string name="title">Title</string>
    <string name="pre_page">Pre Page</string>
    <string name="next_page">Next Page</string>
    <string name="example_text_350" translatable="false">350</string>
    <string name="slash" translatable="false">/</string>
    <string name="ten_number" translatable="false">10</string>
    <string name="extended_ingredients">Extended Ingredients</string>
    <string name="analyzed_instructions">Analyzed Instructions</string>
    <string name="recipe">RECIPE</string>
    <string name="example_aisle">Produce</string>
    <string name="example_consistency">SOLID</string>
    <string name="example_name">onion</string>
    <string name="example_name_clean">onion</string>
    <string name="example_original">2 tablespoons Onion, minced</string>
    <string name="name_clean">Name Clean</string>
    <string name="original" translatable="false">Original</string>
    <string name="line" translatable="false">----------------</string>
    <string name="item_image">Item Image</string>
    <string name="aisle">Aisle</string>
    <string name="consistency">Consistency</string>
    <string name="name_lower">name</string>
    <string name="original_name">Original Name</string>
    <string name="example_original_name">Onion, minced</string>
    <string name="amount">Amount</string>
    <string name="example_amount" translatable="false">2.0</string>
    <string name="meta" translatable="false">Meta</string>
<!-- test  <-->
    <string name="example_meta">minced, minced, minced, minced, minced, minced</string>
    <string name="example_step">Cook pasta in a large pot of boiling water until al dente.</string>
    <string name="step">Step</string>
    <string name="ingredients">Ingredients</string>
    <string name="equipment">Equipment</string>
    <string name="example_id" translatable="false">20420</string>
    <string name="example_item_info_name" translatable="false">pasta</string>
    <string name="localized_name">Localized Name</string>
    <string name="example_item_info_localized_name" translatable="false">pasta</string>
    <string name="item_info_image">Item Info Image</string>
    <string name="show_steps">Show Steps</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="please_enter_recipe">Please Enter Recipe</string>
    <string name="get_recipe_info">Get Recipe Info</string>
    <string name="from_server">From Server</string>
    <string name="from_local" translatable="false">From Local</string>

    <string name="help_dialog">Help dialog</string>
    <string name="help_dialog_message">Steps to follow:\n\n
    1- Write the name of the food you would like to see the recipe for\n\n
    2-Click on From Server or Local (Local will only shows previously saved recipes)\n\n
    3-You can add or remove the recipe\n\n
    4-Click on Analyzed Instruction to see the step by step instruction\n\n
    5-Click on Extended the Ingredients to see the ingredients</string>
    <string name="help_dialog_title">Help</string>
    <string name="aram_recipe">Aram Recipe</string>






    <string name="recipe_shared_preference_key">recipe</string>
    <string name="recipe_search_shared_preference_key" translatable="false">aram.recipe.search</string>
    <string name="not_found_recipe_message">Not found recipe</string>
    <string name="please_enter_recipe_message">Please enter recipe</string>
    <string name="please_check_server_or_local_message">Please check server or local</string>
    <string name="fail_to_response_handler_message">Fail to response handler</string>
    <string name="fetching_information_message">Fetching information...</string>
    <string name="successfully_fetch_information_message">Successfully fetch information</string>
    <string name="adding_item_message">Adding item</string>
    <string name="duplicate_recipe_message">Duplicate recipe</string>
    <string name="successfully_save_recipe_message">Successfully save recipe</string>
    <string name="removing_recipe_item_message">Removing recipe item</string>
    <string name="successfully_removed_recipe_item_message">Successfully removed recipe item</string>


    <!--************************************************-->

</resources>