<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15sp"
    android:orientation="vertical"
    tools:context=".aram.MainRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_recipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:hint="@string/please_enter_recipe"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/btn_fetch_recipe_info"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_margin="2sp"
            android:background="@null"
            android:contentDescription="@string/get_recipe_info"
            android:scaleType="centerCrop"
            android:src="@drawable/search_icon" />

        <ImageButton
            android:id="@+id/btn_help"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_margin="2sp"
            android:background="@null"
            android:contentDescription="@string/help_dialog"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_help" />

    </LinearLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_btn_show_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_server" />

        <RadioButton
            android:id="@+id/radio_btn_show_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_local" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_management_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="invisible">

        <ImageButton
            android:id="@+id/btn_pre_page"
            android:layout_width="15sp"
            android:layout_height="15sp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/pre_page"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back" />

        <EditText
            android:id="@+id/txt_current_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@string/ten_number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/slash" />

        <TextView
            android:id="@+id/txt_total_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/example_text_350" />

        <ImageButton
            android:id="@+id/btn_next_page"
            android:layout_width="15sp"
            android:layout_height="15sp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/next_page"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_next" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp" />

</LinearLayout>